--- a/app/tsconfig.app.json
+++ b/app/tsconfig.app.json
@@ -22,9 +22,15 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+    "paths": {
+      "@/*": [
+        "./src/*"
+      ]
+    }
   },
   "include": [
-    "src"
-  ]
+    "src",
+    "./src/declarations.d.ts"
+  ],
 }
