--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "^1.7.9",
+    "lodash": "^4.17.21",
     "qs": "^6.14.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -19,6 +20,7 @@
     "sass": "^1.85.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.15",
     "@types/qs": "^6.9.18",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
