--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 alembic==1.14.1
 annotated-types==0.7.0
 anyio==4.8.0
-beautifulsoup4==4.13.3
 click==8.1.8
 debugpy==1.8.12
 exceptiongroup==1.2.2
@@ -19,9 +18,11 @@ pydantic==2.10.6
 pydantic_core==2.27.2
 python-dotenv==1.0.1
 sniffio==1.3.1
-soupsieve==2.6
 SQLAlchemy==2.0.38
 starlette==0.45.3
 typing-inspect==0.9.0
 typing_extensions==4.12.2
 uvicorn==0.34.0
+APScheduler==3.11.0
+selenium==4.29.0
+requests==2.32.3
