--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,13 @@
+version: "3.9"
+
 services:
   postgres:
     image: postgres:latest
     container_name: postgres-container
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: quote_master_db
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
     ports:
       - "5432:5432"
     networks:
@@ -17,10 +19,10 @@ services:
     image: dpage/pgadmin4:latest
     container_name: pgadmin-container
     environment:
-      PGADMIN_DEFAULT_EMAIL: itayemails@gmail.com
-      PGADMIN_DEFAULT_PASSWORD: postgres
-      PGADMIN_CONFIG_SERVER_MODE: "False"
-      PGADMIN_CONFIG_MASTER_PASSWORD_REQUIRED: "False"
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_EMAIL}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_PASSWORD}
+      PGADMIN_CONFIG_SERVER_MODE: ${PGADMIN_CONFIG_SERVER_MODE}
+      PGADMIN_CONFIG_MASTER_PASSWORD_REQUIRED: ${PGADMIN_CONFIG_MASTER_PASSWORD_REQUIRED}
     ports:
       - "8080:80"
     networks:
@@ -28,16 +30,17 @@ services:
     volumes:
       - ./pgpass:/pgpass
       - ./servers.json:/pgadmin4/servers.json
+
   # server:
   #   image: server
-  #   container_name: server-container
-  #   env_file:
-  #     - .env
   #   build:
   #     context: .
   #     dockerfile: Dockerfile
+  #   container_name: server-container
+  #   env_file:
+  #     - .env
   #   environment:
-  #     DATABASE_URL: postgres://postgres:postgres@postgres:5432/quote_master_db
+  #     DATABASE_URL: ${DATABASE_URL}
   #   ports:
   #     - "8000:8000"
   #   depends_on:
