--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,19 +1,19 @@
 {
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "name": "Server",
-            "type": "debugpy",
-            "request": "launch",
-            "module": "uvicorn",
-            "args": [
-                "src.server:app",
-                "--reload"
-            ],
-            "env": {
-                "PYTHONPATH": "${workspaceFolder}/src"
-            },
-            "jinja": true
-        }
-    ]
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "name": "Server",
+      "type": "debugpy",
+      "request": "launch",
+      "module": "uvicorn",
+      "args": [
+        "server.src.server:app",
+        "--reload"
+      ],
+      "env": {
+        "PYTHONPATH": "${workspaceFolder}/server"
+      },
+      "jinja": true
+    }
+  ]
 }
